tests/cases/negative/typing/grading/implicits/noGradeIdTypeTooBig.lam
-- inferred is .2, so should not be able to find an n such than 3+n=2 (for exact usage)
t : (a : (_, .3 .+ _) Type 0) -> a -> a
t = \a x -> x
